--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>daily-habits-tracker</title>
+    <title>Daily Habits Tracker</title>
   </head>
   <body>
-    <div id="app"></div>
+    <main id="app">
+      <header>
+        <h1>Daily Habits Tracker</h1>
+      </header>
+
+      <section id="quote">
+        <p>Daily motivational quote goes here</p>
+      </section>
+
+      <section id="habits">
+        <h2>Today's Habits</h2>
+        <p>No habits added yet</p>
+      </section>
+
+      <section id="stats">
+        <h2>Your Progress</h2>
+        <p>Progress will be shown here</p>
+      </section>
+    </main>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
