submit and save habits

--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <title>Daily Habits Tracker</title>
   </head>
   <body>
-    <main id="app">
+    
       <header>
         <h1>Daily Habits Tracker</h1>
       </header>
-
+    <main id="app">
       <section id="quote">
         <p>Daily motivational quote goes here</p>
       </section>
+      <section id="form-container"></section>
 
       <section id="habits">
         <h2>Today's Habits</h2>
-        <p>No habits added yet</p>
+        <ul id="habits-list"></ul>
       </section>
 
       <section id="stats">
