2 apis and fallbacks

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/style.css">
     <title>Daily Habits Tracker</title>
   </head>
   <body>
     
       <header>
         <h1>Daily Habits Tracker</h1>
+        <p id="current-date"></p>
       </header>
     <main id="app">
       <section id="quote">
