--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     
     
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="./public/styles/style.css">
     <script type="module" src="/src/main.js"></script>
     <title>Daily Habits Tracker</title>
     <link rel="icon" href="./public/images/favicon.ico">
